# probprogMonty

./: .gitignore  README.md  pyproject.toml
notebooks/: MontyHall.ipynb  viz.ipynb
